--- a/src/assets/styles/iv_style.less
+++ b/src/assets/styles/iv_style.less
@@ -18,3 +18,19 @@
     padding-bottom: 12px;
     margin-right: 12px;
 }
+
+.ivu-menu-dark.ivu-menu-vertical .ivu-menu-item-active:not(.ivu-menu-submenu), .ivu-menu-dark.ivu-menu-vertical .ivu-menu-item-active:not(.ivu-menu-submenu):hover, .ivu-menu-dark.ivu-menu-vertical .ivu-menu-submenu-title-active:not(.ivu-menu-submenu), .ivu-menu-dark.ivu-menu-vertical .ivu-menu-submenu-title-active:not(.ivu-menu-submenu):hover{
+    color: #fff !important;
+    background: #2d8cf0!important 
+}
+
+.popTip{
+    .ivu-poptip-arrow{
+        display: none;
+    }
+    .ivu-poptip-body{
+        padding: 0;
+        background: #515a6e;
+        color: #fff;
+    }
+}
