用户角色分配

--- a/src/assets/styles/iv_style.less
+++ b/src/assets/styles/iv_style.less
@@ -13,10 +13,24 @@
     margin-left: 4px !important;
 }
 
-.ivu-tree-arrow{
+.menuConfig .ivu-tree-arrow{
     vertical-align: middle;
     padding-bottom: 12px;
     margin-right: 12px;
+}
+
+.ivu-tree-arrow{
+    margin-right: 12px;
+}
+
+.vertical-center-modal{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    .ivu-modal{
+        top: 0;
+    }
 }
 
 .ivu-menu-dark.ivu-menu-vertical .ivu-menu-item-active:not(.ivu-menu-submenu), .ivu-menu-dark.ivu-menu-vertical .ivu-menu-item-active:not(.ivu-menu-submenu):hover, .ivu-menu-dark.ivu-menu-vertical .ivu-menu-submenu-title-active:not(.ivu-menu-submenu), .ivu-menu-dark.ivu-menu-vertical .ivu-menu-submenu-title-active:not(.ivu-menu-submenu):hover{
