权限模块功能,连表删除,删除数据库冗余数据

--- a/src/assets/styles/iv_style.less
+++ b/src/assets/styles/iv_style.less
@@ -53,3 +53,19 @@
     display: flex;
     margin-bottom: 20px;
 }
+
+.ivu-checkbox{
+    margin-right: 6px;
+}
+
+.ivu-checkbox-group-item{
+    width: 160px;
+    margin-top: 20px;
+    margin-right: 36px !important;
+}
+.ivu-checkbox-group{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    padding: 0 10px 0 30px;
+}
