项目立项审批流程

--- a/src/assets/styles/iv_style.less
+++ b/src/assets/styles/iv_style.less
@@ -69,3 +69,14 @@
     justify-content: space-between;
     padding: 0 10px 0 30px;
 }
+
+.ivu-steps .ivu-steps-tail{
+    left: 196px !important;
+}
+.ivu-steps .ivu-steps-tail>i:after{
+    left:0 !important;
+}
+
+.ivu-steps{
+    margin-top: 20px;
+}
