优化前端效果

--- a/src/assets/styles/iv_style.less
+++ b/src/assets/styles/iv_style.less
@@ -33,9 +33,14 @@
     }
 }
 
+
 .ivu-menu-dark.ivu-menu-vertical .ivu-menu-item-active:not(.ivu-menu-submenu), .ivu-menu-dark.ivu-menu-vertical .ivu-menu-item-active:not(.ivu-menu-submenu):hover, .ivu-menu-dark.ivu-menu-vertical .ivu-menu-submenu-title-active:not(.ivu-menu-submenu), .ivu-menu-dark.ivu-menu-vertical .ivu-menu-submenu-title-active:not(.ivu-menu-submenu):hover{
     color: #fff !important;
     background: #2d8cf0!important 
+}
+
+.ivu-menu-dark.ivu-menu-vertical .ivu-menu-item:hover, .ivu-menu-dark.ivu-menu-vertical .ivu-menu-submenu-title:hover,.ivu-menu-dark.ivu-menu-vertical .ivu-menu .ivu-menu-submenu .ivu-menu-item:hover,.ivu-menu-dark.ivu-menu-vertical>.ivu-menu .ivu-menu-item:hover{
+    color: #2d8cf0 !important;
 }
 
 .popTip{
