--- a/src/assets/styles/iv_style.less
+++ b/src/assets/styles/iv_style.less
@@ -85,3 +85,18 @@
 .ivu-steps{
     margin-top: 20px;
 }
+
+.demo-spin-icon-load{
+    animation: ani-demo-spin 1s linear infinite;
+}
+@keyframes ani-demo-spin {
+    from { transform: rotate(0deg);}
+    50%  { transform: rotate(180deg);}
+    to   { transform: rotate(360deg);}
+}
+
+.usercenter_info{
+    .ivu-input[disabled], fieldset[disabled] .ivu-input{
+        color: #515a6e;
+    }
+}
