--- a/src/assets/styles/main.less
+++ b/src/assets/styles/main.less
@@ -12,3 +12,25 @@
 .marginTop10{
     margin-top: 10px; 
 }
+
+/*自定义滚动条样式*/
+.scrollBarStyle::-webkit-scrollbar
+{
+    width:3px;
+    height:16px;
+    background-color:#F5F5F5;
+}
+
+ .scrollBarStyle::-webkit-scrollbar-track
+{
+    box-shadow:inset 0 0 6px rgba(0,0,0,0.1);
+    border-radius:10px;
+    background-color:#F5F5F5;
+}
+
+ .scrollBarStyle::-webkit-scrollbar-thumb
+{
+    border-radius:10px;
+    box-shadow:inset 0 0 6px rgba(0,0,0,.1);
+    background-color:#888;
+}
